# OctaCore

./: .gitignore  COPYING.md  README.md  meson.build
config/: default.cfg  default_map_settings.cfg  sound.cfg  ui.cfg
config/ui/: edithud.cfg
src/: meson.build
src/client/: meson.build
src/engine/: aa.cc  aa.hh  animmodel.hh  bih.cc  bih.hh  blend.cc  blend.hh  client.cc  command.cc  command.hh  console.cc  console.hh  dynlight.cc  dynlight.hh  engine.h  engine.hh  ents.hh  explosion.hh  grass.cc  grass.hh  hitzone.hh  iqm.hh  lensflare.hh  light.cc  light.hh  lightning.hh  main.cc  main.cpp  main.hh  material.cc  material.hh  md5.hh  menus.cc  model.hh  movie.cc  movie.cpp  movie.hh  mpr.hh  normal.cc  obj.hh  (+45 more)
src/game/: ai.cc  client.cc  ctf.hh  entities.cc  game.cc  game.hh  render.cc  render.cpp  scoreboard.cc  server.cc  weapon.cc
src/sauerlib/: encoding.cc  encoding.hh  endian.hh  stream.cc  stream.hh  tools.cc  tools.hh  types.hh
src/shared/: command.hh  crypto.cc  cube.hh  ents.hh  geom.cc  geom.hh  gl.hh  glemu.cc  glemu.hh  glexts.hh  gzstream.cc  gzstream.hh  iengine.h  iengine.hh  igame.hh  rwops.hh  stream.cc  tools.cc  tools.hh  zip.cc  zip.hh
